# SwiftTransformer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml
cmake/Modules/: FindNCCL.cmake
scripts/: converter.py  decode_output.py  encode_input.py
scripts/lib/: converter_lib.py
src/: CMakeLists.txt
src/csrc/: CMakeLists.txt  pybinding.cc
src/csrc/kernel/: CMakeLists.txt  activation_types.h  activations.cuh  addbias.cu  addbias.h  count_nan.cu  count_nan.h  embedding.cu  embedding.h  findmax.cu  findmax.h  fused_activ_multiply.cu  fused_activ_multiply.h  fused_addbias_activ.cu  fused_addbias_activ.h  fused_context_stage_attention.cu  fused_context_stage_attention.h  fused_decoding_stage_attention.cu  fused_decoding_stage_attention.h  fused_decoding_stage_attention_mha.cu  gather_last_tokens.cu  gather_last_tokens.h  kvcache_mgmt.cu  kvcache_mgmt.h  layernorm.cu  layernorm.h  reduction.cuh  rmsnorm.cu  rmsnorm.h  rotary_posi_embedding.cu  rotary_posi_embedding.h  softmax.cu  softmax.h  unfused_attention.cu  unfused_attention.h  xformers_attention.cu  xformers_attention.h
src/csrc/layer/: CMakeLists.txt  attention.cc  attention.h  ffn.cc  ffn.h  gated_ffn.cc  gated_ffn.h
src/csrc/model/: CMakeLists.txt
src/csrc/model/gpt/: CMakeLists.txt  gpt.cc  gpt.h  gpt_base.h  gpt_hyper_param.h  gpt_pagedattn_param.h  gpt_parallelism_param.h  gpt_weight.cc  gpt_weight.h  gptop_base.cc  gptop_base.h
src/csrc/model/gpt/gpt2/: CMakeLists.txt  gpt2op.cc  gpt2op.h
src/csrc/model/gpt/llama2/: CMakeLists.txt  llama2op.cc  llama2op.h
src/csrc/model/gpt/opt/: CMakeLists.txt  optop.cc  optop.h
src/csrc/util/: CMakeLists.txt  cublas_wrapper.cc  cublas_wrapper.h  cuda_utils.h  debug_utils.h  nccl_utils.cc  nccl_utils.h  py_block_migration.cc  py_block_migration.h  py_nccl.cc  py_nccl.h  py_swapping.cc  py_swapping.h  st_datatypes.h  torch_utils.h
src/examples/: CMakeLists.txt  benchmark_all_input_same.cc  run_gpt.cc
src/examples/lib/: common_gpt_hyper_params.h  inference_batch.cc  inference_batch.h  simple_vocab_decoder.h  st_args.cc  st_args.h  utils.h
src/unittest/: CMakeLists.txt  unittest_torch_utils.h  unittest_utils.h
src/unittest/kernel/: CMakeLists.txt  addbias.cc  attention_ref.cc  attention_ref.h  findmax.cc  fused_activ_multiply.cc  fused_addbias_activ.cc  fused_attention.cc  kvcache_mgmt_ref.cc  kvcache_mgmt_ref.h  layernorm.cc  rmsnorm.cc  rotary_posi_embedding.cc  rotary_posi_embedding_ref.cc  rotary_posi_embedding_ref.h  softmax.cc
src/unittest/layer/: CMakeLists.txt  attention_ref.cc  attention_ref.h  attention_utils.h  parallel_attention.cc  parallel_ffn.cc
src/unittest/util/: CMakeLists.txt  cublas_wrapper.cc
